--- a/roles/aws-aqcom-dns/tasks/factionfiction.yml
+++ b/roles/aws-aqcom-dns/tasks/factionfiction.yml
@@ -10,7 +10,7 @@
       aws_secret_key: '{{ aqcom_aws_secret }}'
       type: "A"
       ttl: "300"
-      value: '{{ archipelago_ip }}'
+      value: '{{ loadbalancer_ip }}'
 
 
 
