--- a/roles/aws-aqcom-dns/tasks/hubris.yml
+++ b/roles/aws-aqcom-dns/tasks/hubris.yml
@@ -19,7 +19,7 @@
       record: "hubris.house."
       type: "A"
       ttl: "300"
-      value: '{{ archipelago_ip }}'
+      value: '{{ loadbalancer_ip }}'
       aws_access_key: '{{ aqcom_aws_key }}'
       aws_secret_key: '{{ aqcom_aws_secret }}'
   tags:
@@ -33,7 +33,7 @@
       record: "www.hubris.house."
       type: "A"
       ttl: "300"
-      value: '{{ archipelago_ip }}'
+      value: '{{ loadbalancer_ip }}'
       aws_access_key: '{{ aqcom_aws_key }}'
       aws_secret_key: '{{ aqcom_aws_secret }}'
   tags:
@@ -62,7 +62,7 @@
       record: "*.hubris.house."
       type: "A"
       ttl: "300"
-      value: '{{ archipelago_ip }}'
+      value: '{{ loadbalancer_ip }}'
       aws_access_key: '{{ aqcom_aws_key }}'
       aws_secret_key: '{{ aqcom_aws_secret }}'
   tags:
