--- a/roles/aws-aqcom-dns/tasks/bromioscreations.yml
+++ b/roles/aws-aqcom-dns/tasks/bromioscreations.yml
@@ -10,7 +10,7 @@
       aws_secret_key: '{{ aqcom_aws_secret }}'
       type: "A"
       ttl: "86400"
-      value: '{{ archipelago_ip }}'
+      value: '{{ loadbalancer_ip }}'
 
 - name: bromioscreations.com. - AAAA
   route53:
@@ -176,4 +176,4 @@
       aws_secret_key: '{{ aqcom_aws_secret }}'
       type: "A"
       ttl: "300"
-      value: '{{ archipelago_ip }}'
+      value: '{{ loadbalancer_ip }}'
