--- a/roles/aws-aqcom-dns/tasks/cleartext.yml
+++ b/roles/aws-aqcom-dns/tasks/cleartext.yml
@@ -10,7 +10,7 @@
       aws_secret_key: '{{ aqcom_aws_secret }}'
       type: "A"
       ttl: "300"
-      value: '{{ archipelago_ip }}'
+      value: '{{ loadbalancer_ip }}'
 
 - name: cleartextcontent.co.uk. - MX
   route53:
@@ -62,5 +62,5 @@
       aws_secret_key: '{{ aqcom_aws_secret }}'
       type: "A"
       ttl: "300"
-      value: '{{ archipelago_ip }}'
+      value: '{{ loadbalancer_ip }}'
 
