--- a/roles/aws-aqcom-dns/tasks/larpme.yml
+++ b/roles/aws-aqcom-dns/tasks/larpme.yml
@@ -6,7 +6,7 @@
       record: "larp.me"
       type: "A"
       ttl: "300"
-      value: '{{ archipelago_ip }}'
+      value: '{{ loadbalancer_ip }}'
       aws_access_key: '{{ aqcom_aws_key }}'
       aws_secret_key: '{{ aqcom_aws_secret }}'
 
@@ -124,7 +124,7 @@
       record: "www.larp.me"
       type: "A"
       ttl: "300"
-      value: '{{ archipelago_ip }}'
+      value: '{{ loadbalancer_ip }}'
       aws_access_key: '{{ aqcom_aws_key }}'
       aws_secret_key: '{{ aqcom_aws_secret }}'
 
@@ -136,7 +136,7 @@
       record: "local.larp.me"
       type: "A"
       ttl: "300"
-      value: '{{ archipelago_ip }}'
+      value: '{{ loadbalancer_ip }}'
       aws_access_key: '{{ aqcom_aws_key }}'
       aws_secret_key: '{{ aqcom_aws_secret }}'
 
@@ -148,7 +148,7 @@
       record: "staging.larp.me"
       type: "A"
       ttl: "300"
-      value: '{{ archipelago_ip }}'
+      value: '{{ loadbalancer_ip }}'
       aws_access_key: '{{ aqcom_aws_key }}'
       aws_secret_key: '{{ aqcom_aws_secret }}'
 
@@ -172,7 +172,7 @@
       record: "wiki.larp.me"
       type: "A"
       ttl: "300"
-      value: '{{ archipelago_ip }}'
+      value: '{{ loadbalancer_ip }}'
       aws_access_key: '{{ aqcom_aws_key }}'
       aws_secret_key: '{{ aqcom_aws_secret }}'
 
@@ -184,6 +184,6 @@
       record: "locations.larp.me"
       type: "A"
       ttl: "300"
-      value: '{{ archipelago_ip }}'
+      value: '{{ loadbalancer_ip }}'
       aws_access_key: '{{ aqcom_aws_key }}'
       aws_secret_key: '{{ aqcom_aws_secret }}'
