--- a/roles/aws-aqcom-dns/tasks/ludoistic.yml
+++ b/roles/aws-aqcom-dns/tasks/ludoistic.yml
@@ -11,7 +11,7 @@
       record: "ludoistic.com."
       type: "A"
       ttl: "300"
-      value: '{{ archipelago_ip }}'
+      value: '{{ loadbalancer_ip }}'
       aws_access_key: '{{ istic_aws_key }}'
       aws_secret_key: '{{ istic_aws_secret }}'
   tags:
