--- a/roles/aws-aqcom-dns/tasks/monthlymoon.yml
+++ b/roles/aws-aqcom-dns/tasks/monthlymoon.yml
@@ -13,7 +13,7 @@
       aws_secret_key: '{{ aqcom_aws_secret }}'
       type: "A"
       ttl: "300"
-      value: '{{ archipelago_ip }}'
+      value: '{{ loadbalancer_ip }}'
 
 
 
