➕ Add elasticsearch to firth

--- a/ansible-galaxy-reqs.yml
+++ b/ansible-galaxy-reqs.yml
@@ -1,5 +1,7 @@
 - src: https://github.com/Fsero/ansible-apt.git
   version: removing_warning_in_ansible_2
+- src: elastic.elasticsearch
+  version: v7.16.3
 - src: geerlingguy.java
 - src: elboletaire.transmission
 - src: hannseman.homebridge
