Config for Firth

--- a/playbook.yml
+++ b/playbook.yml
@@ -34,6 +34,18 @@
     - { role: archipelago-nginx, tags: nginx }
     - water-gkhs-filebot
     - water-gkhs-flexget
+
+- hosts: firth
+  become: yes
+  roles:
+    - archipelago-packages
+    - archipelago-users
+    - archipelago-exim
+    - archipelago-docker
+    - plexupdate
+    - { role: archipelago-nginx, tags: nginx }
+    - water-gkhs-filebot
+    - water-gkhs-flexget
     - b2-backup
     - { role: elastic.elasticsearch, tags: elastic }
 
