--- a/roles/aws-route53/tasks/foipme.yml
+++ b/roles/aws-route53/tasks/foipme.yml
@@ -189,6 +189,18 @@
 
 
 
+- name: bobbitworm.foip.me. - A
+  route53:
+      overwrite: true
+      command: "create"
+      zone: "foip.me"
+      record: "bobbitworm.foip.me."
+      aws_access_key: '{{ aqcom_aws_key }}'
+      aws_secret_key: '{{ aqcom_aws_secret }}'
+      type: "A"
+      ttl: "300"
+      value: '{{ loadbalancer_ip }}'
+
 - name: obviouslyfakeurl.foip.me. - A
   route53:
       overwrite: true
