--- a/roles/archipelago-docker/tasks/main.yml
+++ b/roles/archipelago-docker/tasks/main.yml
@@ -16,13 +16,34 @@
 - name: install docker
   apt:
     name: "{{item}}"
-    state: latest
+    state: present
     update_cache: yes
   loop:
     - docker-ce
     - docker-ce-cli
   tags:
     - docker
+
+- name: Allow docker to access redis
+  lineinfile:
+    path: /etc/redis/redis.conf
+    line: bind 127.0.0.1 ::1 172.17.0.1
+    regex: ^bind
+  tags:
+    - docker
+  notify:
+   - restart redis
+
+- name: Make sure docker can access MariaDB
+  copy:
+    src: mysql/docker.cnf
+    dest: /etc/mysql/mariadb.conf.d/60-docker.cnf
+    owner: root
+    mode: '0664'
+  tags:
+    - docker
+  notify:
+   - restart mysql
 
 - name: Add users to docker group
   user:
