update inventory - rename & remove caision

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
-inventory = ./etc/inventory
+inventory = ./etc/inventory.ini
 roles_path = galaxy-roles
 vault_password_file = ~/.vault_pass.txt
