The great {{ ansible-managed }}ening

--- a/roles/water-gkhs-web-errors/templates/config/errors_apache.conf
+++ b/roles/water-gkhs-web-errors/templates/config/errors_apache.conf
@@ -1,3 +1,4 @@
+# {{ ansible_managed }}
 Alias /.ErrorDocuments	/var/www/errors
 ErrorDocument 404	/.ErrorDocuments/locate.php
 ErrorDocument 410	/.ErrorDocuments/404.html
