--- a/roles/water-gkhs-nginx/files/diffie-helman.conf
+++ b/roles/water-gkhs-nginx/files/diffie-helman.conf
@@ -1,3 +1,4 @@
+# {{ ansible_managed }}
 ssl_ciphers TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES256-GCM-SHA384;
 
 ssl_prefer_server_ciphers on;
