Maybe fix lint?

--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -17,3 +17,6 @@ jobs:
       with:
         targets: |
             "playbook.yml"
+        override-deps: |
+          ansible==2.10
+          ansible-lint==4.*
