➖ So long Archipelago, Long live Firth
Why:

Resolves:
See also:

--- a/etc/inventory.ini
+++ b/etc/inventory.ini
@@ -1,14 +1,14 @@
 [archipelago_cenote:children]
-archipelago
+; archipelago
 cenote
 firth
 
 [nginx_hosts:children]
-archipelago
+; archipelago
 firth
 
-[archipelago]
-archipelago.water.gkhs.net hostname=archipelago.water.gkhs.net
+; [archipelago]
+; archipelago.water.gkhs.net hostname=archipelago.water.gkhs.net
 
 [firth]
 firth.water.gkhs.net hostname=firth.water.gkhs.net ansible_host=46.4.84.119
