--- a/roles/water-gkhs-packages/tasks/main.yml
+++ b/roles/water-gkhs-packages/tasks/main.yml
@@ -19,6 +19,12 @@
   when: ansible_distribution == 'Debian' and ansible_distribution_release == 'stretch'
 
 
+#- name: Install key
+#  apt_key:
+#    keyserver: keyserver.ubuntu.com
+#    id: 8B48AD6246925553
+#  when: ansible_distribution == 'Debian'
+
 - name: Enable Ubuntu universe repository
   when: ansible_distribution == 'Ubuntu'
   apt_repository:
@@ -114,3 +120,13 @@
      - "{{ python_version }}-passlib"
   tags:
      - aws
+
+- name: Increase inotify watches level (for VSCode)
+  lineinfile:
+    line: "fs.inotify.max_user_watches=524288"
+    state: "present"
+    dest: /etc/sysctl.conf
+    regexp: '^fs.inotify.max_user_watches'
+  notify: sysctl
+  tags:
+    sysctl
