--- a/roles/aws-route53/tasks/ludoistic.yml
+++ b/roles/aws-route53/tasks/ludoistic.yml
@@ -17,6 +17,20 @@
   tags:
       - ludoistic
 
+- name: www.ludoistic.com. - A
+  route53:
+      overwrite: true
+      command: "create"
+      zone: "ludoistic.com"
+      record: "www.ludoistic.com."
+      type: "A"
+      ttl: "300"
+      value: '{{ loadbalancer_ip }}'
+      aws_access_key: '{{ istic_aws_key }}'
+      aws_secret_key: '{{ istic_aws_secret }}'
+  tags:
+      - ludoistic
+
 - name: google._domainkey.ludoistic.com. - TXT
   route53:
       overwrite: true
