--- a/roles/firth-nginx/templates/ssl/letsencrypt_ssl.conf
+++ b/roles/firth-nginx/templates/ssl/letsencrypt_ssl.conf
@@ -1,5 +1,5 @@
 
-    ssl_certificate /etc/letsencrypt/live/archipelago.water.gkhs.net/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/archipelago.water.gkhs.net/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/{{ letsencrypt_dir }}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/{{ letsencrypt_dir }}/privkey.pem;
     ssl_session_cache    shared:SSL:1m;
     ssl_session_timeout  10m;
