Updates for new version of ansible-lint

--- a/roles/water-gkhs-users/tasks/main.yml
+++ b/roles/water-gkhs-users/tasks/main.yml
@@ -21,7 +21,7 @@
    - ccooke
   authorized_key:
     user: "{{ item }}"
-    key: "{{ lookup('file', 'files/{{ item }}.keys') }}"
+    key: "{{ lookup('file', 'files/' ~  item ~ '.keys') }}"
     exclusive: true
   tags:
     - users
