--- a/etc/inventory.ini
+++ b/etc/inventory.ini
@@ -2,16 +2,21 @@
 ; archipelago
 cenote
 firth
+atoll
 
 [nginx_hosts:children]
 ; archipelago
 firth
+atoll
 
 ; [archipelago]
 ; archipelago.water.gkhs.net hostname=archipelago.water.gkhs.net
 
 [firth]
 firth.water.gkhs.net hostname=firth.water.gkhs.net ansible_host=46.4.84.119
+
+[atoll]
+atoll.water.gkhs.net hostname=atoll.water.gkhs.net ansible_host=65.108.48.68
 
 [cenote]
 cenote.water.gkhs.net hostname=cenote.water.gkhs.net
