--- a/etc/inventory.ini
+++ b/etc/inventory.ini
@@ -24,5 +24,5 @@ cenote.water.gkhs.net hostname=cenote.water.gkhs.net
 [localactions]
 localhost
 
-;[caisson]
-;caisson.water.gkhs.net ansible_host=10.42.0.128 hostname=caisson.water.gkhs.net
+[caisson]
+caisson.water.gkhs.net ansible_host=caisson.local hostname=caisson.water.gkhs.net
