--- a/roles/firth-docker/tasks/main.yml
+++ b/roles/firth-docker/tasks/main.yml
@@ -18,6 +18,7 @@
     name: "{{ item }}"
     state: present
     update_cache: yes
+    cache_valid_time: 21600
   loop:
     - docker-ce
     - docker-ce-cli
