--- a/roles/water-gkhs-filebot/handlers/main.yml
+++ b/roles/water-gkhs-filebot/handlers/main.yml
@@ -29,7 +29,7 @@
     path: "/proc/{{ item }}/status"
     state: absent
   with_items: "{{ running_processes.stdout_lines }}"
-  ignore_errors: yes
+  ignore_errors: true
   register: killed_processes
   listen: "restart filebot inotify"
 
@@ -37,7 +37,7 @@
   listen: "restart filebot inotify"
   shell: "kill -9 {{ item }}"
   with_items: "{{ killed_processes.results | select('failed') | map(attribute='item') | list }}"
-  ignore_errors: yes
+  ignore_errors: true
 
 - name: Restart inotify
   listen: "restart filebot inotify"
