--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,39 @@
-ansible==2.10
-ansible-lint==4.*
+ansible==7.1.0
+ansible-compat==2.2.7
+ansible-core==2.14.1
+ansible-lint==6.10.1
+attrs==22.2.0
+black==22.12.0
 boto==2.49.0
-boto3==1.17.38
-botocore==1.20.38
-cffi==1.14.5
-cryptography==3.4.6
-Jinja2==2.11.3
-jmespath==0.10.0
-MarkupSafe==1.1.1
-pycparser==2.20
-python-dateutil==2.8.1
-PyYAML==5.4.1
-rich>=10.0.0,<11.0.0
-s3transfer==0.3.6
-six==1.15.0
-urllib3==1.26.5
+boto3==1.26.41
+botocore==1.29.41
+bracex==2.3.post1
+cffi==1.15.1
+click==8.1.3
+commonmark==0.9.1
+cryptography==38.0.4
+filelock==3.9.0
+Jinja2==3.1.2
+jmespath==1.0.1
+jsonschema==4.17.3
+MarkupSafe==2.1.1
+mypy-extensions==0.4.3
+packaging==22.0
+pathspec==0.10.3
+platformdirs==2.6.2
+pycparser==2.21
+Pygments==2.13.0
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+PyYAML==6.0
+resolvelib==0.8.1
+rich==13.0.0
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.7
+s3transfer==0.6.0
+six==1.16.0
+subprocess-tee==0.4.1
+tomli==2.0.1
+urllib3==1.26.13
+wcmatch==8.4.1
+yamllint==1.28.0
