--- a/requirements.yml
+++ b/requirements.yml
@@ -1,13 +1,11 @@
-- src: https://github.com/Fsero/ansible-apt.git
-  version: removing_warning_in_ansible_2
-- src: elastic.elasticsearch
-  version: v7.16.3
-- src: geerlingguy.java
-- src: elboletaire.transmission
-- src: hannseman.homebridge
-#- src: pablocrivella.heroku-toolbelt
-- src: torian.filebeat
-- src: https://github.com/aquarion/ansible-papertrail
-  name: ansible.papertrail
-- src: https://github.com/ieguiguren/ansible-nordvpn
-- src: https://github.com/amarao/ansible-get-external-ip-via-dyndns
+roles:
+  - src: elastic.elasticsearch
+    version: v7.16.3
+  - src: geerlingguy.java
+  - src: elboletaire.transmission
+  #- src: pablocrivella.heroku-toolbelt
+  - src: https://github.com/aquarion/ansible-papertrail
+    name: ansible.papertrail
+
+collections:
+ - community.aws
